Completed Data Passing and Started Navigation

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3344,4 +3344,9 @@ input, select, textarea {
 	.myTable {
 		border-collapse: separate;
 		border-spacing: 20px;
-	  }	
+		border: #1c2021 1px solid;
+	  }
+	
+	.quantity {
+		border: 1px solid;
+	}
