--- a/assets/css/bar_chart.css
+++ b/assets/css/bar_chart.css
@@ -107,4 +107,32 @@ body {
     /* Change the color of checked checkbox */
     background-color: #0cbda898; /* Set the desired color for checked checkbox */
   }
+
+  /*Loading Spinner for Scenarios Comparison*/
+  #loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
   
+  .loader {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #83d3c9;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
